publicstatus: remove composite public endpoint
